--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p>A new line in our file!</p>
 <div><img src="Chrysanthemum.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <h3>Modify the changes in html.</h3>
+<div><img src="Hydrangeas.jpg" alt="Hydrangeas" style="max-width: 500; max-height: 200;"></div>
 </body>
 </html>
