--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <div><img src="Chrysanthemum.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
-<h3>Modify the changes in html.</h3>
+<h3>Modify the changes in code file.</h3>
 <div><img src="Hydrangeas.jpg" alt="Hydrangeas" style="max-width: 500; max-height: 200;"></div>
 </body>
 </html>
