--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hello world!</h1>
+<h1>Git tutorial</h1>
 <div><img src="Jellyfish.jpg" alt="Hello World Image" style="height: 100%; max-width: 500px;"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
